# insert-and-balance

./: .gitignore  .gitmodules  CHALLENGE.md  README.md  calibrate_intrinsics.py  generate_charuco_board.py  realsense_intrinsics.yaml
multipanda_ros2/: run
multipanda_ros2/franka_bringup/config/real/: single_controllers.yaml
multipanda_ros2/franka_camera_calibration/: README.md  package.xml  setup.cfg  setup.py
multipanda_ros2/franka_camera_calibration/config/: calibration.yaml  charuco_board.yaml  poses_template.csv
multipanda_ros2/franka_camera_calibration/franka_camera_calibration/: calibrate_from_captures.py  calibrate_wrist_camera.py  capture_samples.py  charuco.py  generate_charuco_board.py  handeye.py  move_group_client.py  record_poses.py  validate_calibration.py
multipanda_ros2/franka_camera_calibration/launch/: calibration.launch.py
multipanda_ros2/franka_description/robots/real/: panda_arm.urdf.xacro
multipanda_ros2/franka_example_controllers/: franka_example_controllers.xml
multipanda_ros2/franka_example_controllers/src/subscriber/: cartesian_impedance_controller.cpp
multipanda_ros2/franka_hardware/src/real/: franka_multi_hardware_interface.cpp  robot.cpp
multipanda_ros2/franka_moveit_config/config/: joint_limits.yaml  kinematics.yaml  panda_ros_controllers.yaml  pilz_cartesian_limits.yaml
multipanda_ros2/franka_moveit_config/launch/: moveit.launch.py
multipanda_ros2/franka_moveit_config/rviz/: moveit.rviz
multipanda_ros2/franka_moveit_config/srdf/: panda_arm.srdf.xacro  panda_arm.xacro  panda_arm_hand.xacro
multipanda_ros2/franka_pose_estimation/: CMakeLists.txt  README.md  container_setup.sh  docker_run.sh  package.xml
multipanda_ros2/franka_pose_estimation/launch/: pose_service.launch.py
multipanda_ros2/franka_pose_estimation/scripts/: foundationpose_pose_service.py
multipanda_ros2/franka_pose_estimation/srv/: GetObjectPose.srv
multipanda_ros2/franka_web_gui/: README.md  docker-compose.yml  start_web_gui.sh
multipanda_ros2/franka_web_gui/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
multipanda_ros2/franka_web_gui/frontend/src/: App.tsx  index.css
multipanda_ros2/franka_web_gui/ros2_nodes/: dummy_action_server.py  dummy_service_server.py  hello_world_publisher.py  hello_world_subscriber.py  robot_status_publisher.py
multipanda_ros2/mujoco_ros_pkgs/: README.md
multipanda_ros2/mujoco_ros_pkgs/mujoco_ros2_control/: package.xml
multipanda_ros2/objects/: insert.stl  peg.stl
multipanda_ros2/peg_in_hole_pipeline/: README.md  package.xml  setup.cfg  setup.py
multipanda_ros2/peg_in_hole_pipeline/launch/: peg_in_hole_pipeline.launch.py
multipanda_ros2/peg_in_hole_pipeline/peg_in_hole_pipeline/: grasp.py  gripper.py  motion.py  perception.py  pipeline_node.py  states.py
multipanda_ros2/tools/: Dockerfile  setup_env
scripts/: setup.sh
src/ball_balance/: setup.cfg  setup.py
src/insertion/: setup.cfg  setup.py
(+29 files in other folders)
