<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_camera_calibration</name>
  <version>0.0.1</version>
  <description>
    Wrist-camera (eye-in-hand) extrinsic calibration for the Franka Panda.
    Moves the arm through a CSV of Cartesian poses via the existing MoveIt
    move_group, detects a ChArUco board at each pose, and computes the
    camera-to-flange transform with OpenCV hand-eye calibration.
  </description>
  <maintainer email="paulkroeger10@gmail.com">Paul Kroeger</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>shape_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
